force-app/main/default/objects/User_Answer__c/User_Answer__c.object-meta.xml
<CustomObject>
    <label>User Answer</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>User Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Answer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>