force-app/main/default/objects/User_Answer__c/fields/Assigned_Exam__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Exam__c</fullName>
    <label>Assigned Exam</label>
    <referenceTo>Assigned_Exam__c</referenceTo>
    <relationshipLabel>User Answer</relationshipLabel>
    <relationshipName>User_Answer</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>