force-app/main/default/objects/User_Answer__c/fields/Is_Correct__c.field-meta.xml
<CustomField>
    <fullName>Is_Correct__c</fullName>
    <formula>true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Correct</label>
    <type>Checkbox</type>
</CustomField>