force-app/main/default/objects/User_Answer__c/fields/Selected_Answer__c.field-meta.xml
<CustomField>
    <fullName>Selected_Answer__c</fullName>
    <label>Selected Answer</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Another placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>