force-app/main/default/objects/User_Answer__c/fields/Written_Answer__c.field-meta.xml
<CustomField>
    <fullName>Written_Answer__c</fullName>
    <label>Written Answer</label>
    <type>TextArea</type>
</CustomField>